Table users { id int [pk, increment]; full_name varchar; email varchar [unique]; hashed_password varchar; role varchar; is_active boolean; created_at timestamp; updated_at timestamp }
Table contracts { id int [pk, increment]; title varchar; contract_number varchar [unique]; category varchar; description text; start_date date; end_date date; status varchar; created_by int [ref: > users.id]; assigned_to int [ref: > users.id]; reviewed_at timestamp; approved_at timestamp; created_at timestamp; updated_at timestamp }
Table contract_versions { id int [pk, increment]; contract_id int [ref: > contracts.id]; version_number int; file_path varchar; change_summary text; created_by int [ref: > users.id]; created_at timestamp }
Table obligations { id int [pk, increment]; contract_id int [ref: > contracts.id]; title varchar; description text; obligation_type varchar; due_date date; assigned_to int [ref: > users.id]; status varchar; completion_date date; created_at timestamp; updated_at timestamp }
Table renewals { id int [pk, increment]; contract_id int [ref: > contracts.id]; renewal_date date; previous_expiry_date date; new_expiry_date date; status varchar; assigned_to int [ref: > users.id]; notes text; created_at timestamp; updated_at timestamp }
Table notifications { id int [pk, increment]; user_id int [ref: > users.id]; contract_id int [ref: > contracts.id]; obligation_id int [ref: > obligations.id]; notification_type varchar; title varchar; message text; status varchar; scheduled_at timestamp; sent_at timestamp; read_at timestamp; created_at timestamp; updated_at timestamp }
Table reports { id int [pk, increment]; report_type varchar; title varchar; generated_by int [ref: > users.id]; file_path varchar; parameters text; created_at timestamp }
Table compliance_records { id int [pk, increment]; contract_id int [ref: > contracts.id]; status varchar; compliance_score decimal; risk_level varchar; completed_count int; pending_count int; overdue_count int; notes text; evaluated_at timestamp; created_at timestamp; updated_at timestamp }
Table audit_logs { id int [pk, increment]; user_id int [ref: > users.id]; action varchar; entity_type varchar; entity_id int; old_values json; new_values json; ip_address varchar; created_at timestamp }
Table activities { id int [pk, increment]; user_id int [ref: > users.id]; activity_type varchar; description text; entity_type varchar; entity_id int; created_at timestamp }
